--- a/.github/workflows/api_pipeline.yml
+++ b/.github/workflows/api_pipeline.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
   workflow_dispatch: 
   schedule:
-    - cron: '5 21 * * *' # También se ejecuta solo todas las noches a las 12 AM
+    - cron: '8 * * * *' # También se ejecuta solo todas las noches a las 12 AM
 
 jobs:
   test:
